--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="${usesCleartextTraffic}"
       android:supportsRtl="true">
-      <meta-data android:name="com.naver.maps.map.NCP_KEY_ID" android:value="kg5jyetgih" />
+      <meta-data android:name="com.naver.maps.map.NCP_KEY_ID" android:value="d9ffar0fe3" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
