--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@react-native/metro-config": "0.81.4",
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
